# frdm-gpt

./: .gitignore  .gitmodules  README.md  bigram-multi-head-self-attention-ffwd.py  bigram-self-attention.py  dataset-prose-correction.ipynb  dataset-scene-beat-to-prose.ipynb  frdm-gpt.ipynb  gpt-2-layernorm.py  gpt-3-dropout.py  gpt-4-training-prep.py  gpt-residual-connections.py  gpt.py  inference.py  prompts.py  prose-correction-dataset.ipynb  pyproject.toml  results-history.txt  v2.py
assets/: attention-graph-viz.md
buildup-variants/: bigram-multi-head-self-attention.py  bigram.py  gpt-4-training-prep.py
data/: ansturm-sample.txt
ft-configs/: README.md  frdm-Llama-3.1-8B-Write-Beat-to-Prose-v1.yaml  frdm-Llama-3.1-8B-Write-Beat-to-Prose-v2.yaml
src/: inference.py  model.py  train_model.py
